--- a/nft-card-component/index.html
+++ b/nft-card-component/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
   <title>Frontend Mentor | NFT preview card component</title>
 
@@ -43,7 +45,13 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">André Menezes</a>.
+  </div>
+  <div class="back eth-color">
+    <span class="hey-you">Reach me out!</span>
+      <a href="https://github.com/dedemenezes" class="hey-you eth-color"><i class="fab fa-github"></i></a>
+      <a href="https://twitter.com/dedemenezes_" class="hey-you eth-color"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/andre-menezes-developer/" class="hey-you eth-color"><i class="fab fa-linkedin"></i></a>
   </div>
 </body>
 </html>
