change color when hovering div contatcts

--- a/nft-card-component/index.html
+++ b/nft-card-component/index.html
@@ -47,11 +47,13 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">André Menezes</a>.
   </div>
-  <div class="back eth-color">
-    <span class="hey-you">Reach me out!</span>
-      <a href="https://github.com/dedemenezes" class="hey-you eth-color"><i class="fab fa-github"></i></a>
-      <a href="https://twitter.com/dedemenezes_" class="hey-you eth-color"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.linkedin.com/in/andre-menezes-developer/" class="hey-you eth-color"><i class="fab fa-linkedin"></i></a>
+  <div class="back contacts" id='start-color'>
+    <span class="hey-you contacts">Reach me out!</span>
+      <a href="https://github.com/dedemenezes" class="hey-you contacts"><i class="fab fa-github"></i></a>
+      <a href="https://twitter.com/dedemenezes_" class="hey-you contacts"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/in/andre-menezes-developer/" class="hey-you contacts"><i class="fab fa-linkedin"></i></a>
   </div>
+
+  <script type="text/javascript" src="src/index.js"></script>
 </body>
 </html>
