--- a/nft-card-component/index.html
+++ b/nft-card-component/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
+  <html lang="en">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
@@ -21,39 +21,41 @@
   </style>
 </head>
 <body>
-  <div class="card">
-    <img class="card-img" src="images/image-equilibrium.jpg" alt="Non Fungible Token image">
-    <h3 class="card-header text-white font-bold">Equilibrium #3429</h3>
-    <p class="card-text font-light text-opacity">Our Equilibrium collection promotes balance and calm.</p>
-    <div class="infos">
-      <div class="price d-flex-aligned">
-        <div class='price-logo img-svg'></div>
-        <p class="price-amount eth-color">0.041 ETH</p>
+  <main>
+    <div class="card">
+      <img class="card-img" src="images/image-equilibrium.jpg" alt="Non Fungible Token image">
+      <h1 class="card-header text-white font-bold">Equilibrium #3429</h1>
+      <p class="card-text font-light text-opacity">Our Equilibrium collection promotes balance and calm.</p>
+      <div class="infos">
+        <div class="price d-flex-aligned">
+          <div class='price-logo img-svg'></div>
+          <p class="price-amount eth-color">0.041 ETH</p>
+        </div>
+        <div class="remaining-time d-flex-aligned">
+          <div class="img-clock img-svg"></div>
+          <p class="font-light text-opacity">3 days left</p>
+        </div>
       </div>
-      <div class="remaining-time d-flex-aligned">
-        <div class="img-clock img-svg"></div>
-        <p class="font-light text-opacity">3 days left</p>
+      <div class="creator d-flex-aligned">
+        <img src="images/image-avatar.png" alt="user profile pic" class="avatar">
+        <p class="font-light"><span class="text-opacity">Creation of</span> <strong id="artist" class="text-white">Jules Wyvern</strong></p>
       </div>
     </div>
-    <div class="creator d-flex-aligned">
-      <img src="images/image-avatar.png" alt="user profile pic" class="avatar">
-      <p class="font-light"><span class="text-opacity">Creation of</span> <strong id="artist" class="text-white">Jules Wyvern</strong></p>
+  </main>
 
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">André Menezes</a>.
     </div>
+    <div class="back contacts" id='start-color'>
+      <span class="hey-you contacts">Reach me out!</span>
+        <a href="https://github.com/dedemenezes" class="hey-you contacts"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/dedemenezes_" class="hey-you contacts"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/andre-menezes-developer/" class="hey-you contacts"><i class="fab fa-linkedin"></i></a>
+    </div>
+  </footer>
 
-  </div>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">André Menezes</a>.
-  </div>
-  <div class="back contacts" id='start-color'>
-    <span class="hey-you contacts">Reach me out!</span>
-      <a href="https://github.com/dedemenezes" class="hey-you contacts"><i class="fab fa-github"></i></a>
-      <a href="https://twitter.com/dedemenezes_" class="hey-you contacts"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.linkedin.com/in/andre-menezes-developer/" class="hey-you contacts"><i class="fab fa-linkedin"></i></a>
-  </div>
-
-  <script type="text/javascript" src="src/index.js"></script>
+  <script src="src/index.js"></script>
 </body>
 </html>
