--- a/nft-card-component/index.html
+++ b/nft-card-component/index.html
@@ -45,14 +45,14 @@
 
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" aria-label="Link to challenge page on frontend mentor website">Frontend Mentor</a>.
       Coded by <a href="#">André Menezes</a>.
     </div>
     <div class="back contacts" id='start-color'>
       <span class="hey-you contacts">Reach me out!</span>
-        <a href="https://github.com/dedemenezes" class="hey-you contacts"><i class="fab fa-github"></i></a>
-        <a href="https://twitter.com/dedemenezes_" class="hey-you contacts"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/in/andre-menezes-developer/" class="hey-you contacts"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/dedemenezes" class="hey-you contacts"><i class="fab fa-github" aria-label="Link to Dede Menezes github account"></i></a>
+        <a href="https://twitter.com/dedemenezes_" class="hey-you contacts"><i class="fab fa-twitter" aria-label="Link to Dede Menezes twitter account"></i></a>
+        <a href="https://www.linkedin.com/in/andre-menezes-developer/" class="hey-you contacts" aria-label="Link to Dede Menezes linkedin account"><i class="fab fa-linkedin"></i></a>
     </div>
   </footer>
 
