--- a/space-tourism-website-main/space-tourism-solution/index.html
+++ b/space-tourism-website-main/space-tourism-solution/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Playground - JavaScript 101</title>
+    <title>Space Tourism</title>
   </head>
   <body>
     <p style="margin-top: 40vh; text-align: center; font: normal 24px monospace;">
