bg image nav and headers style done

--- a/space-tourism-website-main/space-tourism-solution/index.html
+++ b/space-tourism-website-main/space-tourism-solution/index.html
@@ -2,9 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Space Tourism</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
+
+      <link rel="stylesheet" href="assets/stylesheet/style.css">
+      <title>Space Tourism</title>
   </head>
   <body>
+    <header class="bg-home">
+      <nav class="flex-between-center">
+        <img src="assets/shared/logo.svg" alt="Space Tourism logo" width="36px">
+        <i class="fas fa-bars"></i>
+        <div class="nav-menu text-white d-none">
+          <ul class="inline-list">
+            <li>
+              <a class="text-white" href="/home"><strong>01</strong> Home</a>
+            </li>
+            <li>
+              <a class="text-white" href="/destination"><strong>02</strong> Destination</a>
+            </li>
+            <li>
+              <a class="text-white" href="/crew"><strong>03</strong> Crew</a>
+            </li>
+            <li>
+              <a class="text-white" href="/technology"><strong>04</strong> Technology</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="banner-content">
+        <p class="heading-5">SO, YOU WANT TO TRAVEL TO</p>
+        <h1>SPACE</h1>
+        <p>Let's face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the
+        edge of it. Well sit back, and relax because we'll give you a truly out of this world experience!</p>
+        <a href="/destination" class='btn-home'>Explore</a>
+      </div>
+    </header>
+
     <p style="margin-top: 40vh; text-align: center; font: normal 24px monospace;">
       Open the console 🤓
     </p>
