challenge almost done

--- a/expenses-chart-component-main/expenses-chart-component-main/index.html
+++ b/expenses-chart-component-main/expenses-chart-component-main/index.html
@@ -54,13 +54,13 @@
         <div class="sun graph__bar" data-id="sun"></div>
       </div>
       <div class="graph__header graph__grid">
-        <div class="">mon</div>
-        <div class="">tue</div>
-        <div class="">wed</div>
-        <div class="">divu</div>
-        <div class="">fri</div>
-        <div class="">sat</div>
-        <div class="">sun</div>
+        <p class="">mon</p>
+        <p class="">tue</p>
+        <p class="">wed</p>
+        <p class="">thu</p>
+        <p class="">fri</p>
+        <p class="">sat</p>
+        <p class="">sun</p>
       </div>
     </div>
 
