--- a/expenses-chart-component-main/expenses-chart-component-main/index.html
+++ b/expenses-chart-component-main/expenses-chart-component-main/index.html
@@ -54,13 +54,6 @@
         <div class="sun graph__bar" data-id="sun"></div>
       </div>
       <div class="graph__header graph__grid">
-        <p class="">mon</p>
-        <p class="">tue</p>
-        <p class="">wed</p>
-        <p class="">thu</p>
-        <p class="">fri</p>
-        <p class="">sat</p>
-        <p class="">sun</p>
       </div>
     </div>
 
@@ -80,7 +73,9 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
   <script>
+    
     const bars = document.querySelectorAll('.graph__bar')
     bars.forEach((bar) => {
       bar.addEventListener('mouseover', (event) => {
@@ -92,9 +87,20 @@
         amount.classList.remove('graph__amount--active')
       })
     })
+
+    const insertDay = (day, graphHeader) => {
+      graphHeader.insertAdjacentHTML('beforeend', `<p>${day}</p>`)
+    }
+
     fetch("data.json")
         .then(response => response.json())
         .then((json) => {
+
+          // inserir os dias
+          const graphHeader = document.querySelector('.graph__header')
+          const days = json.map(e => e.day)
+          days.forEach(day => insertDay(day, graphHeader))
+
           console.log(json.sort(e => e.amount));
 
           const higherDay = json.reduce((max, curren) => max.amount > curren.amount ? max : curren);
