fix hovering profile icons

--- a/employee-page-dribble/index.html
+++ b/employee-page-dribble/index.html
@@ -14,11 +14,11 @@
     </div>
     <div class="navbar__menu navbar__menu--grow">
       <ul class="inline-list">
-        <li><a href="#" class="nav__link">Calendar</a></li>
-        <li><a href="#" class="nav__link">Statistic</a></li>
-        <li><a href="#" class="nav__link active">Employee</a></li>
-        <li><a href="#" class="nav__link">Client</a></li>
-        <li><a href="#" class="nav__link">Equipment</a></li>
+        <li><a href="#" class="nav__link nav__link--bottom">Calendar</a></li>
+        <li><a href="#" class="nav__link nav__link--bottom">Statistic</a></li>
+        <li><a href="#" class="nav__link nav__link--bottom active">Employee</a></li>
+        <li><a href="#" class="nav__link nav__link--bottom">Client</a></li>
+        <li><a href="#" class="nav__link nav__link--bottom">Equipment</a></li>
       </ul>
     </div>
     <div class="navbar__menu">
