add header layout and btn component

--- a/employee-page-dribble/index.html
+++ b/employee-page-dribble/index.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Employee Page</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
-</head>
-<body>
-  <nav class="navbar">
-    <div class="navbar__brand">
-      <img src="images/example_logo.png" alt="Logo" width="64">
-    </div>
-    <div class="navbar__menu navbar__menu--grow">
-      <ul class="inline-list">
-        <li><a href="#" class="nav__link nav__link--bottom">Calendar</a></li>
-        <li><a href="#" class="nav__link nav__link--bottom">Statistic</a></li>
-        <li><a href="#" class="nav__link nav__link--bottom active">Employee</a></li>
-        <li><a href="#" class="nav__link nav__link--bottom">Client</a></li>
-        <li><a href="#" class="nav__link nav__link--bottom">Equipment</a></li>
-      </ul>
-    </div>
-    <div class="navbar__menu">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Employee Page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="navbar__brand">
+        <img src="images/example_logo.png" alt="Logo" width="64">
+      </div>
+      <div class="navbar__menu navbar__menu--grow">
+        <ul class="inline-list">
+          <li><a href="#" class="nav__link nav__link--bottom">Calendar</a></li>
+          <li><a href="#" class="nav__link nav__link--bottom">Statistic</a></li>
+          <li><a href="#" class="nav__link nav__link--bottom active">Employee</a></li>
+          <li><a href="#" class="nav__link nav__link--bottom">Client</a></li>
+          <li><a href="#" class="nav__link nav__link--bottom">Equipment</a></li>
+        </ul>
+      </div>
+      <div class="navbar__menu">
 
-      <ul class="inline-list">
-        <li>
-          <a href="#" class="nav__link">
-            <i class="fa-regular fa-bell"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="nav__link">
-            <i class="fa-regular fa-envelope"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="nav__link">
-            <img class="avatar" src="https://avatars.githubusercontent.com/u/80218755" alt="Profile pic">
-          </a>
-        </li>
-      </ul>
+        <ul class="inline-list">
+          <li>
+            <a href="#" class="nav__link">
+              <i class="fa-regular fa-bell"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav__link">
+              <i class="fa-regular fa-envelope"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="nav__link">
+              <img class="avatar" src="https://avatars.githubusercontent.com/u/80218755" alt="Profile pic">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="header">
+        <h1>employees</h1>
+        <a href="#" class="btn btn--green">add employee</a>
+      </div>
     </div>
-  </nav>
-</body>
+  </body>
 </html>
